--- a/css/main.css
+++ b/css/main.css
@@ -124,7 +124,12 @@
     grid-template-areas: "bioimage" "bio" "school1" "school2" "school3";
     grid-template-columns: 1fr; }
   .projects {
-    grid-template-columns: repeat(2, 1fr); } }
+    grid-template-columns: repeat(2, 1fr); }
+  .bio-image {
+    height: 150px;
+    width: 150px; }
+  .boxes div {
+    font-size: 1rem; } }
 
 @media screen and (max-width: 500px) {
   main#home h1 {
@@ -264,6 +269,7 @@ main {
     border: 3px #fff solid;
     padding: 1.5rem 2.5rem;
     margin-bottom: 3rem;
+    max-width: 80vw;
     transition: all 0.5s ease-out; }
     .boxes div:hover {
       padding: 0.5rem 1.5rem;
@@ -328,7 +334,12 @@ main {
     grid-template-areas: "bioimage" "bio" "school1" "school2" "school3";
     grid-template-columns: 1fr; }
   .projects {
-    grid-template-columns: repeat(2, 1fr); } }
+    grid-template-columns: repeat(2, 1fr); }
+  .bio-image {
+    height: 150px;
+    width: 150px; }
+  .boxes div {
+    font-size: 1rem; } }
 
 @media screen and (max-width: 500px) {
   main#home h1 {
